--- a/src/components/TypeBadge/TypeBadge.scss
+++ b/src/components/TypeBadge/TypeBadge.scss
@@ -6,17 +6,22 @@
   background-color: s-color("trout");
   border-radius: 100%;
   border: 4px solid s-color("white");
+  cursor: pointer;
   display: flex;
   height: 40px;
   justify-content: center;
   justify-items: center;
   width: 40px;
   margin: 0 5px;
-  transition: 200ms all;
+  transition: 500ms all;
 
   &__image {
     margin: 0 auto;
-    width: 64%;
+    width: 100%;
+  }
+
+  &--is-selected {
+    border-color: s-color("card-yellow");
   }
 
   &--bug {
