--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -1,5 +1,6 @@
-@import '../../scss/responsive.scss';
-@import '../../scss/typography.scss';
+@import '../scss/normalize.scss';
+@import '../scss/responsive.scss';
+@import '../scss/typography.scss';
 
 
 $colors: (
