--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -34,7 +34,15 @@
     box-sizing: border-box;
     border: 4px solid s-color("white");
     border-radius: 10px;
+    margin: 0 auto;
+    min-height:165px;
+    min-width:165px;
     width: 75%;
+
+    img {
+      height: 100%;
+      width: 100%;
+    }
   }
 
   &__name {
