--- a/src/components/ControlBar/ControlBar.scss
+++ b/src/components/ControlBar/ControlBar.scss
@@ -19,6 +19,7 @@
     justify-content: space-between;
     max-width: 1920px;
     margin: 0 auto;
+    padding: 40px 40px 0;
 
     @include media("medium", min) {
       align-items: flex-start;
